tests/errors/kind_string_of_int.f90
program string_kind_integer
    implicit none
    integer('a') :: x
end program